--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.17.3",
+    "install": "^0.13.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "npm": "^8.5.5",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
